<resources>
    <string name="app_name">Lembretes</string>
    <string name="tarefas">Tarefas</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">descrição</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Delete</string>
    <string name="descricao_tarefa">Ops!,Você não possui, nenhuma tarefa hoje</string>
</resources>